--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="./Icons/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="./Icons/apple-touch-icon.png">
     <meta name="apple-mobile-web-app-title" content="PA Games" >
-    <link rel="manifest" href="./Icons/site.webmanifest">
+    <link rel="manifest" href="./site.webmanifest">
 </head>
 
 <body>
