--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./Icons/apple-touch-icon.png">
     <meta name="apple-mobile-web-app-title" content="PA Games" >
     <link rel="manifest" href="./sitemanifest.json">
+    <script src="./cache.js" defer></script>
 </head>
 
 <body>
