--- a/Upcoming Games.html
+++ b/Upcoming Games.html
@@ -46,7 +46,7 @@
             <a href="./index.html"><li>Home</li></a>
             <a href="./About us.html"><li>About-us</li></a>
             <a href="./Games.html"><li>Games</li></a>
-            <a class="selected3" href="./Upcoming Games.html"><li>Upcoming-Games</li></a>
+            <a class="selected3" href="./Upcoming-Games.html"><li>Upcoming Games</li></a>
             <li id="drop"><a href="./Consoles.html">Store</a>
 
                 <ol class="olbasic" id="dropdown">
