--- a/Faq.html
+++ b/Faq.html
@@ -106,7 +106,7 @@
                 <a href="./index.html">Home</a>
                 <a href="./About us.html">About us</a>
                 <a href="./Games.html">Games</a>
-                <a href="./Upcoming Games.html">Upcoming Games</a>
+                <a href="./Upcoming-Games.html">Upcoming Games</a>
                 <a href="./Consoles.html">Consoles</a>
                 <a href="./Peripherals.html">Peripherals</a>
                 <a id="selected" href="./Faq.html">Faq</a>
