--- a/Consoles.html
+++ b/Consoles.html
@@ -45,9 +45,9 @@
         <ol class="navigation">
 
             <a href="./index.html"><li>Home</li></a>
-            <a href="./About us.html"><li>About-us</li></a>
+            <a href="./About-us.html"><li>About-us</li></a>
             <a href="./Games.html"><li>Games</li></a>
-            <a href="./Upcoming Games.html"><li>Upcoming-Games</li></a>
+            <a href="./Upcoming-Games.html"><li>Upcoming-Games</li></a>
             <li id="drop"><a class="selected3" href="./Consoles.html">Store</a>
 
                 <ol class="olbasic" id="dropdown">
@@ -105,9 +105,9 @@
                     </section></a>
                 <hr>
                 <a href="./index.html">Home</a>
-                <a href="./About us.html">About us</a>
+                <a href="./About-us.html">About us</a>
                 <a href="./Games.html">Games</a>
-                <a href="./Upcoming Games.html">Upcoming Games</a>
+                <a href="./Upcoming-Games.html">Upcoming Games</a>
                 <a id="selected" href="./Consoles.html">Consoles</a>
                 <a href="./Peripherals.html">Peripherals</a>
                 <a href="./Faq.html">Faq</a>
