--- a/Peripherals.html
+++ b/Peripherals.html
@@ -104,7 +104,7 @@
                     </section></a>
                 <hr>
                 <a href="./index.html">Home</a>
-                <a href="./About us.html">About us</a>
+                <a href="./About-us.html">About us</a>
                 <a href="./Games.html">Games</a>
                 <a href="./Upcoming-Games.html">Upcoming Games</a>
                 <a href="./Consoles.html">Consoles</a>
