--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="apple-mobile-web-app-title" content="PA Games" >
     <link rel="manifest" href="./sitemanifest.json">
     <script src="./cache.js" defer></script>
+    <script src="./Scripts/Animations/homeAnimation.js" defer></script>
 </head>
 
 <body>
@@ -216,7 +217,7 @@
 
             <section id="info-1">
 
-                <img id="img-1" src="./Stylesheets/Images/Home-Page-Images/info-1 image.webp" alt="Game character">
+                <img  class="hidden" id="img-1" src="./Stylesheets/Images/Home-Page-Images/info-1 image.webp" alt="Game character">
 
                 <section id="intro-1-content">
 
@@ -224,7 +225,7 @@
                         All the Excitement<br>in one place
                     </h1>
 
-                    <img id="img-2" src="./Stylesheets/Images/Home-Page-Images/info-1 image.webp" alt="Game character">
+                    <img  class="hidden" id="img-2" src="./Stylesheets/Images/Home-Page-Images/info-1 image.webp" alt="Game character">
 
                     <p class="p-tags">You can purchase any items / devices or download any kind of game through Prime Avatar.lk for decent prices and also get Awesome offers for anything.
                     </p>
@@ -253,19 +254,19 @@
                     </p>
                     <p class="p-tags">There are many more items and accessories you can shop through Prime Avatar, click on Shop to Explore more.</p>
 
-                    <img id="accessoriesimg" src="./Stylesheets/Images/Home-Page-Images/intro_image-2.webp" alt="gaming accesories">
+                    <img  class="hidden" id="accessoriesimg" src="./Stylesheets/Images/Home-Page-Images/intro_image-2.webp" alt="gaming accesories">
                     
                     <a href="./Store.html">Shop here</a>
 
                 </section>
 
-                <img id="imginfo2" src="./Stylesheets/Images/Home-Page-Images/intro_image-2.webp" alt="gaming accesories">
+                <img  class="hidden" id="imginfo2" src="./Stylesheets/Images/Home-Page-Images/intro_image-2.webp" alt="gaming accesories">
 
             </section>
 
             <section id="info-3">
 
-                <img src="./Stylesheets/Images/Home-Page-Images/info-3-image.jpg" alt="games collage">
+                <img  class="hidden" src="./Stylesheets/Images/Home-Page-Images/info-3-image.jpg" alt="games collage">
 
                 <section id="info-3-content">
                     <h1 id="info3-title">Up to Date</h1>
@@ -284,7 +285,7 @@
 
                     <a href="#">News</a>
 
-                    <img src="./Stylesheets/Images/Home-Page-Images/info-3-image.jpg" alt="games collage" id="ex-image">
+                    <img  class="hidden" src="./Stylesheets/Images/Home-Page-Images/info-3-image.jpg" alt="games collage" id="ex-image">
                 </section>
 
 
