--- a/Games.html
+++ b/Games.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+    <script src="./Scripts/Games/games.js" defer></script>
 </head>
 
 <body>
@@ -137,215 +138,8 @@
 
         <section class="games">
             <h1 id="top-title">Explore Games</h1>
-            <section class="catagories">
 
-                <!--=====Action Catagory=====================================-->
-
-                <a href="#"><h1 class="catagory-name">Action</h1></a>
-                <a href="#"><h4>See All ></h4></a>
-
-                <section class="action-catagory">
-
-                    <section class="card" id="Delta-Force">
-
-                        <section class="description">
-                            <p>Delta Force is back! The iconic series returns as the definitive free-to-play tactical shooter and featuring three distinct gameplay modes: large-scale PvP warfare, intense extraction shooter action, and a remake of the legendary Black Hawk Down campaign.</p>
-                        </section>
-
-                        <section class="card-details">
-
-                            <a href="#"><h2 class="game-name">Delta Force</h2></a>
-                            <h4 class="price">Free</h4>
-
-                        </section>
-
-                    </section>
-
-                    <section class="card" id="black-myth-wukong">
-
-                        <section class="description">
-                            <p>This upgrade allows owners of Black Myth: Wukong Digital Standard Edition to access Black Myth: Wukong Digital Deluxe Edition content — an exclusive weapon, equipment, and curio, plus the Music Library, featuring a selection of music from the game's soundtrack.</p>
-                        </section>
-
-                        <section class="card-details">
-
-                            <a href="#"><h2 class="game-name">Black Myth Wukong</h2></a>
-                            <h4 class="price">$10</h4>
-
-                        </section>
-
-                    </section>
-
-                    <section class="card" id="Fortnite">
-
-                        <section class="description">
-                            <p>Create, play, and battle with friends for free in Fortnite. Be the last player standing in Battle Royale and Zero Build, experience a concert or live event, or discover over a million creator made games, including racing, parkour, zombie survival, and more. Each Fortnite island has an individual age rating so you can find the one that's right for you and your friends. Find it all in Fortnite ... Drop In.</p>
-                        </section>
-
-                        <section class="card-details">
-
-                            <a href="#"><h2 class="game-name">Fortnite</h2></a>
-                            <h4 class="price">Free</h4>
-
-                        </section>
-
-                    </section>
-
-                    <section class="card" id="GTA-V">
-
-                        <section class="description">
-                            <p>The Grand Theft Auto V: Premium Edition includes the complete GTAV story, Grand Theft Auto Online and all existing gameplay upgrades and content. You’ll also get the Criminal Enterprise Starter Pack, the fastest way to jumpstart your criminal empire in GTA Online.</p>
-                        </section>
-
-                        <section class="card-details">
-
-                            <a href="#"><h2 class="game-name">GTA-V</h2></a>
-                            <h4 class="price">$29.99</h4>
-
-                        </section>
-
-                    </section>
-
-                </section>
-
-                <!--=====RPG Catagory========================================-->
-
-                <a href="#"><h1 class="catagory-name">RPG</h1></a>
-                <a href="#"><h4>See All ></h4></a>
-
-                <section class="RPG-catagory">
-
-                    <section class="card" id="Kingdom-Come">
-
-                        <section class="description">
-                            <p>Kingdom Come: Deliverance is a story-driven open-world RPG that immerses you in an epic adventure in the Holy Roman Empire. Avenge your parents' death as you battle invading forces, go on game-changing quests, and make influential choices.</p>
-                        </section>
-
-                        <section class="card-details">
-
-                            <a href="#"><h2 class="game-name">Kingdom Come: Delivarence</h2></a>
-                            <h4 class="price">$22.99</h4>
-
-                        </section>
-
-                    </section>
-
-                    <section class="card" id="Firelight-Fantacy">
-
-                        <section class="description">
-                            <p>Firelight Fantasy: Vengeance - a game about spectacular sword battles from the third person. This game is an action game based on Scandinavian mythology. Immerse yourself in the unusual story of how Sigurd died.</p>
-                        </section>
-
-                        <section class="card-details">
-
-                            <a href="#"><h2 class="game-name">Firelight Fantacy : Vengeance</h2></a>
-                            <h4 class="price">$5.59</h4>
-
-                        </section>
-
-                    </section>
-
-                    <section class="card" id="COMA">
-
-                        <section class="description">
-                            <p>MMORPG survival zombie game with an open world. Fight, loot, and research!</p>
-                        </section>
-
-                        <section class="card-details">
-
-                            <a href="#"><h2 class="game-name">Coma</h2></a>
-                            <h4 class="price">Free</h4>
-
-                        </section>
-
-                    </section>
-
-                    <section class="card" id="Lindwyrm">
-
-                        <section class="description">
-                            <p>No one suspected what lurked beneath Sigiswal. Meet ancient creatures and save the village in this roguelite action RPG. Dungeons with hack'n'slay combat, platforming and puzzles? We've got it! Strong bosses, co-op mode? That's a given! Are you ready for the Underground?</p>
-                        </section>
-
-                        <section class="card-details">
-
-                            <a href="#"><h2 class="game-name">Lindwyrm</h2></a>
-                            <h4 class="price">$4.69</h4>
-
-                        </section>
-
-                    </section>
-
-                </section>
-
-                <!--=====Racing Catagory=====================================-->
-
-                <a href="#"><h1 class="catagory-name">Racing</h1></a>
-                <a href="#"><h4>See All ></h4></a>
-
-                <section class="Racing-catagory">
-
-                    <section class="card" id="Torque-Dirft2">
-
-                        <section class="description">
-                            <p>From the vibrant streets of Tokyo to high-stakes professional competitions backed by global brands, Torque Drift 2 invokes all aspects of drift and street culture to offer an experience as diverse and dynamic as the motorsport itself.</p>
-                        </section>
-
-                        <section class="card-details">
-
-                            <a href="#"><h2 class="game-name">Torque Dirft 2</h2></a>
-                            <h4 class="price">$9.22</h4>
-
-                        </section>
-
-                    </section>
-
-                    <section class="card" id="WRC">
-
-                        <section class="description">
-                            <p>Build the car of your dreams in our biggest rally game ever, EA SPORTS™ WRC, the all-new official videogame of the FIA World Rally Championship, the first developed by the award-winning team behind the DiRT Rally series.</p>
-                        </section>
-
-                        <section class="card-details">
-
-                            <a href="#"><h2 class="game-name">EA SPORTS™ WRC</h2></a>
-                            <h4 class="price">$49.99</h4>
-
-                        </section>
-
-                    </section>
-
-                    <section class="card" id="NFS-Most-Wanted">
-
-                        <section class="description">
-                            <p>The open-world action in Need for Speed™ Most Wanted gives you the freedom to drive your way. Hit jumps and shortcuts, switch cars, lie low, or head for terrain that plays to your vehicle’s unique strengths.</p>
-                        </section>
-
-                        <section class="card-details">
-
-                            <a href="#"><h2 class="game-name">Need For Speed™: Most Wanted</h2></a>
-                            <h4 class="price">$19.99</h4>
-
-                        </section>
-
-                    </section>
-
-                    <section class="card" id="Asphalt-8">
-
-                        <section class="description">
-                            <p>Experience multiplayer races with fast cars and motorcycles.</p>
-                        </section>
-
-                        <section class="card-details">
-
-                            <a href="#"><h2 class="game-name">Asphalt-8</h2></a>
-                            <h4 class="price">Free</h4>
-
-                        </section>
-
-                    </section>
-
-                </section>
-            </section>
+            <section class="catagories"></section>
 
         </section>
 
