--- a/Consoles.html
+++ b/Consoles.html
@@ -56,6 +56,8 @@
                     <a href="./Consoles.html"><li>Consoles</li></a>
                     <li><hr></li>
                     <a href="./Peripherals.html"><li>Peripherals</li></a>
+                    <li><hr></li>
+                    <a href="#"><li>Accessories</li></a>
                 </ol>
 
             </li>
