--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="manifest" href="./sitemanifest.json">
     <script src="./cache.js" defer></script>
     <script src="./Scripts/Animations/homeAnimation.js" defer></script>
+    <script src="./Scripts/Animations/Hamburger.js" defer></script>
 </head>
 
 <body>
@@ -85,20 +86,19 @@
 
             <!-- --------------------------------------- menu button and menu ---------------------------------------------------------------------------- -->
 
-            <input type="checkbox" id="sidebar-active">
-            <label for="sidebar-active" id="open-sidebar-button">
+            <button id="open-sidebar-button">
 
                 <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
 
-            </label>
+            </button>
 
             <section class="links-container">
 
-                <label for="sidebar-active" id="close-sidebar-button">
+                <button id="close-sidebar-button">
 
                     <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="32px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
 
-                </label>
+                </button>
 
                 <a href="./Sign-in.html">
 
@@ -111,7 +111,7 @@
                     </section></a>
                 <hr>
                 <a id="selected" href="./index.html">Home</a>
-                <a href="./About-us.html">About us</a>
+                <a href="./About us.html">About us</a>
                 <a href="./Games.html">Games</a>
                 <a href="./Upcoming-Games.html">Upcoming Games</a>
                 <a href="./Consoles.html">Consoles</a>
@@ -124,6 +124,7 @@
 
 
         </section>
+
 
     </header>
 
