--- a/Consoles.html
+++ b/Consoles.html
@@ -57,7 +57,7 @@
                     <li><hr></li>
                     <a href="./Peripherals.html"><li>Peripherals</li></a>
                     <li><hr></li>
-                    <a href="#"><li>Accessories</li></a>
+                    <a href="./accessories.html"><li>Accessories</li></a>
                 </ol>
 
             </li>
