--- a/Peripherals.html
+++ b/Peripherals.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./Stylesheets/storeCategoryStyle.css">
     <script src="./Scripts/Animations/Hamburger.js" defer></script>
     <script src="./Scripts/Animations/homeAnimation.js" defer></script>
+    <script src="./Scripts/Store/peripheralItems.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
@@ -165,19 +166,6 @@
                     <h1 class="slot-name">Explore Quality Peripherals</h1>
 
                     <section class="item-list">
-
-                        <a href="#store" class="card">
-
-                                <img src="./Stylesheets/Images/Peripherals-Images/Glorious-Model_D.webp" alt="Item Picture" class="item-pic">
-    
-                                <section class="item-details">
-                                    <h2 class="item-name">Glorious Model D</h2>
-                                    <h4 class="price">$61.39</h4>
-                                    <h4 class="extra">Available</h4>
-                                </section>
-
-
-                        </a>
 
                         <a href="#store">
 
