edited peripheral categories

--- a/Peripherals.html
+++ b/Peripherals.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prime avatar.lk/Consoles</title>
+    <title>prime avatar.lk/Peripherals</title>
     <link rel="stylesheet" href="./Stylesheets/Reset css.css">
     <link rel="stylesheet" href="./Stylesheets/style2.css">
     <link rel="stylesheet" href="./Stylesheets/peripherals-style.css">
@@ -150,15 +150,15 @@
             <section class="items">
 
                 <section class="categoryContainer">
-                    <a href="#"  class="categoryCard hidden">Motherboards</a>
-                    <a href="#"  class="categoryCard hidden">Graphic Cards</a>
-                    <a href="#"  class="categoryCard hidden">RAM Cards</a>
-                    <a href="#"  class="categoryCard hidden">Storage Devices</a>
-                    <a href="#"  class="categoryCard hidden">Processors</a>
-                    <a href="#"  class="categoryCard hidden">KeyBoards</a>
-                    <a href="#"  class="categoryCard hidden">Mouses</a>
-                    <a href="#"  class="categoryCard hidden">Monitors</a>
-                    <a href="#"  class="categoryCard hidden">Chairs</a>
+                    <button  class="categoryCard hidden">Motherboards</button>
+                    <button  class="categoryCard hidden">Graphic Cards</button>
+                    <button  class="categoryCard hidden">RAM Cards</button>
+                    <button  class="categoryCard hidden">Storage Devices</button>
+                    <button  class="categoryCard hidden">Processors</button>
+                    <button  class="categoryCard hidden">KeyBoards</button>
+                    <button  class="categoryCard hidden">Mouses</button>
+                    <button  class="categoryCard hidden">Monitors</button>
+                    <button  class="categoryCard hidden">Chairs</button>
                 </section>
 
                 <section class="item-slot">
