--- a/Peripherals.html
+++ b/Peripherals.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="./Stylesheets/storeCategoryStyle.css">
     <script src="./Scripts/Animations/Hamburger.js" defer></script>
     <script src="./Scripts/Animations/homeAnimation.js" defer></script>
-    <script src="./Scripts/Store/peripheralItems.js" defer></script>
+    <script type="module" src="./Scripts/Store/peripheralItems.js" defer></script>
+    <script src="./Scripts/Store/categorySectionButtons.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
