--- a/Peripherals.html
+++ b/Peripherals.html
@@ -13,6 +13,7 @@
     <script src="./Scripts/Animations/Hamburger.js" defer></script>
     <script src="./Scripts/Animations/homeAnimation.js" defer></script>
     <script src="./Scripts/Store/peripheralItems.js" defer></script>
+    <script src="./Scripts/Store/addToCart.js" defer></script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
