--- a/cart.html
+++ b/cart.html
@@ -119,7 +119,7 @@
     
             <section class="tableContainer">
                 
-                <table  id="cartTable">
+                <table  id="cartTableBody">
                     <caption>Your Order</caption>
                     <tr>
                         <th>Items</th>
