--- a/Peripherals.html
+++ b/Peripherals.html
@@ -108,14 +108,14 @@
                     </section></a>
                 <hr>
                 <a id="selected" href="./index.html">Home</a>
-                <a href="./About us.html">About us</a>
+                <a href="./About-us.html">About us</a>
                 <a href="./Games.html">Games</a>
                 <a href="./Upcoming-Games.html">Upcoming Games</a>
                 <a href="./Consoles.html">Consoles</a>
                 <a href="./Peripherals.html">Peripherals</a>
                 <a href="./Faq.html">Faq</a>
                 <hr>
-                <a href="#">Cart</a>
+                <a href="./cart.html">Cart</a>
 
             </section>
 
