--- a/About-us.html
+++ b/About-us.html
@@ -45,7 +45,7 @@
         <ol class="navigation">
 
             <a href="./index.html"><li>Home</li></a>
-            <a class="selected3" href="./About us.html"><li>About us</li></a>
+            <a class="selected3" href="./About-us.html"><li>About us</li></a>
             <a href="./Games.html"><li>Games</li></a>
             <a href="./Upcoming-Games.html"><li>Upcoming Games</li></a>
             <li id="drop"><a href="#">Store</a>
@@ -103,7 +103,7 @@
                     </section></a>
                 <hr>
                 <a id="selected" href="./index.html">Home</a>
-                <a href="./About us.html">About us</a>
+                <a href="./About-us.html">About us</a>
                 <a href="./Games.html">Games</a>
                 <a href="./Upcoming-Games.html">Upcoming Games</a>
                 <a href="./Consoles.html">Consoles</a>
