--- a/Consoles.html
+++ b/Consoles.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="./Stylesheets/Reset css.css">
     <link rel="stylesheet" href="./Stylesheets/style2.css">
     <link rel="stylesheet" href="./Stylesheets/Consoles-style.css">
+
     <script src="./Scripts/Filterbuttons.js" defer></script>
     <script src="./Scripts/Animations/Hamburger.js" defer></script>
+    <script src="./Scripts/Store/cartNotify.js" defer></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
