cart page updated

--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./Stylesheets/style2.css">
     <link rel="stylesheet" href="./Stylesheets/cartStyle.css">
 
+    <script src="./Scripts/Animations/Hamburger.js" defer></script>
     <script type="module" src="./Scripts/Store/addToCart.js" defer></script>
     <script src="./Scripts/Store/cartNotify.js" defer></script>
 </head>
