cart page styled

--- a/cart.html
+++ b/cart.html
@@ -133,18 +133,12 @@
                 
                 <table  id="cartTableBody">
                     <caption>Your Order</caption>
-                    <tr>
-                        <th>Items</th>
-                        <th>Quantity</th>
-                        <th>Unit Price</th>
-                        <th>Sub Total</th>
-                    </tr>
                 </table>
             </section>
 
             <section class="totalSection">
 
-                <h1 class="Total">Total Price</h1>
+                <h1 class="Total">Confirm Order</h1>
                 <h2 class="TotalPrice"></h2>
                 <a href="#" class="paybtn">Pay</a>
 
