--- a/cart.html
+++ b/cart.html
@@ -32,7 +32,24 @@
     <section class="totalSection">
 
         <h1 class="Total">Confirm Order</h1>
-        <h2 class="TotalPrice"></h2>
+
+        <section class="orderDetails">
+
+            <table class="orderTable">
+
+                <tr>
+                    <td>Number of items:</td>
+                    <td id="itemCount"></td>
+                </tr>
+
+                <tr>
+                    <td></td>
+                </tr>
+
+            </table>
+
+        </section>
+        <!-- <h2 class="TotalPrice"></h2> -->
         <a href="#" class="paybtn">Pay</a>
 
     </section>
