--- a/cart.html
+++ b/cart.html
@@ -49,7 +49,7 @@
             </table>
 
         </section>
-        <!-- <h2 class="TotalPrice"></h2> -->
+        <h2 class="TotalPrice"></h2>
         <a href="#" class="paybtn">Pay</a>
 
     </section>
