--- a/Peripherals.html
+++ b/Peripherals.html
@@ -14,6 +14,7 @@
     <script src="./Scripts/Animations/homeAnimation.js" defer></script>
     <script src="./Scripts/Store/peripheralItems.js" defer></script>
     <script src="./Scripts/Store/cartNotify.js" defer></script>
+    <script src="./Scripts/Store/searchbar.js" defer></script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
