--- a/index.html
+++ b/index.html
@@ -8,18 +8,23 @@
     <link rel="stylesheet" href="./Stylesheets/Reset css.css">
     <link rel="stylesheet" href="./Stylesheets/style2.css">
     <link rel="stylesheet" href="./Stylesheets/home style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+
     <link rel="icon" type="image/png" href="./Icons/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/svg+xml" href="./Icons/favicon.svg">
     <link rel="shortcut icon" href="./Icons/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="./Icons/apple-touch-icon.png">
     <meta name="apple-mobile-web-app-title" content="PA Games" >
     <link rel="manifest" href="./sitemanifest.json">
+
     <script src="./cache.js" defer></script>
     <script src="./Scripts/Animations/homeAnimation.js" defer></script>
     <script src="./Scripts/Animations/Hamburger.js" defer></script>
+    <script src="./Scripts/Store/searchbar.js" defer></script>
+    
 </head>
 
 <body>
