--- a/cart.html
+++ b/cart.html
@@ -43,7 +43,13 @@
                 </tr>
 
                 <tr>
-                    <td></td>
+                    <td>Sub Total:</td>
+                    <td id="subTotalSec"></td>
+                </tr>
+
+                <tr>
+                    <td>Discount</td>
+                    <td id="discountSec"></td>
                 </tr>
 
             </table>
