order table edited

--- a/cart.html
+++ b/cart.html
@@ -38,25 +38,34 @@
             <table class="orderTable">
 
                 <tr>
-                    <td>Number of items:</td>
-                    <td id="itemCount"></td>
+                    <td>Number of items :</td>
+                    <td id="itemCount">--</td>
                 </tr>
 
                 <tr>
-                    <td>Sub Total:</td>
-                    <td id="subTotalSec"></td>
+                    <td>Sub Total :</td>
+                    <td id="subTotalSec">--</td>
                 </tr>
 
                 <tr>
-                    <td>Discount</td>
-                    <td id="discountSec"></td>
+                    <td>Discount :</td>
+                    <td id="discountSec">--</td>
+                </tr>
+
+                <tr>
+                    <td>Tax (2%) :</td>
+                    <td id="taxSec">--</td>
+                </tr>
+
+                <tr>
+                    <td>Total :</td>
+                    <td id="TotalPrice">--</td>
                 </tr>
 
             </table>
 
         </section>
-        <h2 class="TotalPrice"></h2>
-        <a href="#" class="paybtn">Pay</a>
+        <a href="#" class="checkoutbtn">Checkout</a>
 
     </section>
     
