Order details section styled

--- a/cart.html
+++ b/cart.html
@@ -31,7 +31,7 @@
 
     <section class="totalSection">
 
-        <h1 class="Total">Confirm Order</h1>
+        <h1 class="TotalSecTitle">Confirm Order</h1>
 
         <section class="orderDetails">
 
@@ -53,7 +53,7 @@
                 </tr>
 
                 <tr>
-                    <td>Tax (2%) :</td>
+                    <td>Tax (0.2%) :</td>
                     <td id="taxSec">--</td>
                 </tr>
 
@@ -65,7 +65,24 @@
             </table>
 
         </section>
-        <a href="#" class="checkoutbtn">Checkout</a>
+
+        <div>
+            <h1 class="finalPrice">--</h1>
+        </div>
+        
+        <section class="cartActionBtns">
+
+            <button class="cartActions" id="clearCartBtn">Clear all</button>
+            <div>
+                <button class="cartActions" id="addToFavBtn">Add to favorite</button>
+                <button class="cartActions" id="applyFavBtn">Apply Favorite</button>
+            </div>
+        </section>
+
+        <a href="#" class="checkoutbtn">
+            <span></span>
+            Checkout
+        </a>
 
     </section>
     
