media queries fro cart page.

--- a/cart.html
+++ b/cart.html
@@ -65,10 +65,6 @@
             </table>
 
         </section>
-
-        <div>
-            <h1 class="finalPrice">--</h1>
-        </div>
         
         <section class="cartActionBtns">
 
@@ -78,6 +74,11 @@
                 <button class="cartActions" id="applyFavBtn">Apply Favorite</button>
             </div>
         </section>
+        
+        <div class="totalDisplaySec">
+            <h2>Your total</h2>
+            <h1 class="finalPrice">--</h1>
+        </div>
 
         <a href="#" class="checkoutbtn">
             <span></span>
