--- a/cart.html
+++ b/cart.html
@@ -90,6 +90,8 @@
     <!-- Main -->
     <main>
 
+        <button class="viewCartButton">View Cart</button>
+
         <h1 class="cartStatus">Your cart is empty...!</h1>
     
         <section class="tableContainer">
