--- a/Peripherals.html
+++ b/Peripherals.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prime avatar.lk/Peripherals</title>
+    <title>Prime Avatar/Peripherals</title>
     <link rel="stylesheet" href="./Stylesheets/Reset css.css">
     <link rel="stylesheet" href="./Stylesheets/style2.css">
     <link rel="stylesheet" href="./Stylesheets/peripherals-style.css">
