--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,7 @@
 
         <section class="cartNav">
 
-            <button class="backBtn">< Go Back</button>
+            <button class="backBtn">&lt;Go Back</button>
             <a href="./index.html" class="homenavi">Home</a>
 
         </section>
@@ -80,7 +80,7 @@
             <h1 class="finalPrice">--</h1>
         </div>
 
-        <a href="#" class="checkoutbtn">
+        <a href="./payment.html" class="checkoutbtn">
             <span></span>
             Checkout
         </a>
