--- a/payment.html
+++ b/payment.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prime Avatar/payments</title>
+
+    <link rel="stylesheet" href="./Stylesheets/Reset css.css">
+    <link rel="stylesheet" href="./Stylesheets/payments.css">
 </head>
+
 <body>
-    
+    <!-- Header -->
+    <header>
+
+        <section class="logoSection">
+            <!-- LOGO -->
+            <img id="logo" src="./Stylesheets/Images/Logo_Prime_Aavatar.Webp" alt="logo">
+            <h1 id="cartTitle">| Payments</h1>
+        </section>
+
+        <section class="cartNav">
+
+            <button class="backBtn">&lt;Go Back</button>
+            <a href="./index.html" class="homenavi">Home</a>
+
+        </section>
+
+    </header>
+
+    <main>
+
+        <section class="personalDetailsSection">
+            <form id="personalDetails">
+                <caption>Personal Details</caption>
+                <p>
+                    <label for="name">Your Name:</label>
+                    <input type="text" required name="Details" id="name">
+                </p>
+
+                <p>
+                    <label for="address">Address:</label>
+                    <textarea name="Details" id="address" required></textarea>
+                </p>
+
+                <p>
+                    <label for="number">Phone Number</label>
+                    <input type="tel" name="Details" id="number" required>
+                </p>
+            </form>
+        </section>
+
+        <section class="paymentContainer">
+
+            <section class="paymentMethodSelection">
+                <form id="paymentOptions">
+
+                        <input type="radio" name="paymentMethod" id="visaRadio">
+                        <label for="visaRadio">visa card</label>
+                        <input type="radio" name="paymentMethod" id="paypalRadio">
+                        <label for="paypalRadio">Paypal</label>
+                </form>
+            </section>
+
+            <section class="paymentDetailsSection">
+                <form id="visaPaymentDetails">
+                    <caption>Payment Details</caption>
+                    <p>
+                        <label for="cardNumber">Card Number:</label>
+                        <input type="text" name="Details" id="cardNumber" required>
+                    </p>
+
+                    <label for="exDate">Ex. Date:</label>
+                    <input type="text" name="Details" id="exDate" required>
+
+                    <label for="code">Code</label>
+                    <input type="number" name="Details" id="code" required>
+                </form>
+            </section>
+        </section>
+
+    </main>
 </body>
+
 </html>
