--- a/cart.html
+++ b/cart.html
@@ -90,11 +90,13 @@
     <!-- Main -->
     <main>
 
-        <a href="#cartTable" class="viewCartButton" id="viewCart">View Cart</a>
+        <a class="viewCartButton" id="viewCart">View Cart</a>
 
         <h1 class="cartStatus">Your cart is empty...!</h1>
     
         <section class="tableContainer" id="cartTable">
+
+            <button class="viewCartButton" id="closeCart">Close Cart</button>
 
             <h1 class="cartStatus"></h1>
     
