--- a/cart.html
+++ b/cart.html
@@ -90,15 +90,11 @@
     <!-- Main -->
     <main>
 
-        <a class="viewCartButton" id="viewCart">View Cart</a>
+        <a href="#cartTable" class="viewCartButton" id="viewCart">View Cart</a>
 
         <h1 class="cartStatus">Your cart is empty...!</h1>
     
         <section class="tableContainer" id="cartTable">
-
-            <button class="viewCartButton" id="closeCart">Close Cart</button>
-
-            <h1 class="cartStatus"></h1>
     
             <table id="cartTableBody">
             </table>
