--- a/payment.html
+++ b/payment.html
@@ -35,8 +35,11 @@
         <section class="orderInfoContainer">
 
             <table id="orderInfoTable">
-                
-                <h2 class="orderInfoTitle">Order Info</h2>
+                <tr>
+                    <td colspan="2">
+                        <h1 class="orderInfoTitle">Order Info</h1>
+                    </td>
+                </tr>
                 
                 <tr>
                     <td>Total Items:</td>
