--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                         <button>Memory Cards</button>
                                         <button>Motherboards</button>
                                     </div>
-                                    <div class="subFilterSections"
+                                    <div class="subFilterSections">
                                         <button>Graphic Cards</button>
                                         <button>Storage Devices</button>
                                     </div>
