--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                     <ol class="olbasic" id="dropdown">
                             <li id="consoleLink">
-                                <a href="./Consoles.html"  id="consoleLink">&rarr; Consoles</a>
+                                <a href="./Consoles.html"  id="consoleLink" onclick="setDefault()">&rarr; Consoles</a>
 
                                 <div id="consoleFilterContainer" class="filterContainer">
                                     <button id="psFilter">Play Stations</button>
