--- a/Upcoming-Games.html
+++ b/Upcoming-Games.html
@@ -11,8 +11,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+
     <script src="./Scripts/UpcomingGames/upcomingGames.js" defer></script>
     <script src="./Scripts/Animations/Hamburger.js" defer></script>
+    <script src="./Scripts/navigation/navigation.js" defer></script> <!--for the navigation bar-->
+
 </head>
 
 <body>
@@ -29,40 +32,80 @@
 
         <nav>
 
-                    <!-- Search bar -->
-        <form id="search_bar">
+            <!-- Search bar -->
+            <form id="search_bar">
 
-            <input type="text" id="search" placeholder="Search">
+                <input type="text" id="search" placeholder="Search">
 
-            <button id="searchbutton" type="submit">
+                <button id="searchbutton" type="submit">
 
-                <img class="icons_3" src="./Stylesheets/Images/search-interface-symbol.png">
+                    <img class="icons_3" src="./Stylesheets/Images/search-interface-symbol.png">
 
-            </button>
+                </button>
 
-        </form>
+            </form>
 
-        <!-- menu list -->
-        <ol class="navigation">
+            <!-- menu list -->
+            <ol class="navigation olbasic">
 
-            <a href="./index.html"><li>Home</li></a>
-            <a href="./About-us.html"><li>About us</li></a>
-            <a href="./Games.html"><li>Games</li></a>
-            <a class="selected3" href="./Upcoming-Games.html"><li>Upcoming Games</li></a>
-            <li id="drop"><a href="./Consoles.html">Store</a>
+                <li><a class="navLinks" href="./index.html">Home</a></li>
+                <li><a class="navLinks" href="./About-us.html">About us</a></li>
+                <li><a class="navLinks" href="./Games.html">Games</a></li>
+                <li><a class="selected3 navLinks" href="./Upcoming-Games.html">Upcoming Games</a></li>
+                <li id="drop">
+                    <a class="navLinks">Store</a>
 
-                <ol class="olbasic" id="dropdown">
-                    <a href="./Consoles.html"><li>Consoles</li></a>
-                    <li><hr></li>
-                    <a href="./Peripherals.html"><li>Peripherals</li></a>
-                </ol>
+                    <ol class="olbasic" id="dropdown">
+                        <li id="consoleLink">
+                            <a href="./Consoles.html" id="consoleLink" onclick="setDefault()">&rarr; Consoles</a>
 
-            </li>
+                            <div id="consoleFilterContainer" class="filterContainer">
+                                <button id="psFilter">Play Stations</button>
+                                <button id="xboxFilter">X box</button>
+                                <button id="playsFilter">Plays</button>
+                            </div>
+                        </li>
 
-            <a href="./Faq.html"><li>FAQs</li></a>
+                        <li id="periLink">
+                            <a href="./Peripherals.html" id="peripheralsLink">&rarr; Peripherals</a>
 
-        </ol>
+                            <div id="peripheralsFilterContainer" class="filterContainer">
+                                <div class="subFilterSections">
+                                    <button id="keyboardFilter">Keyboards</button>
+                                    <button id="mouseFilter">Mouse</button>
+                                    <button id="chairFilter">Chairs</button>
+                                    <button id="simulatorFilter">Simulator</button>
+                                </div>
+                                <div class="subFilterSections">
+                                    <button id="monitorFilter">Monitors</button>
+                                    <button id="routerFilter">Routers</button>
+                                </div>
+                            </div>
 
+                        </li>
+                        <li id="accLink">
+                            <a href="./Accessories.html">&rarr; Accessories</a>
+
+                            <div id="accessoriesFilterContainer" class="filterContainer">
+                                <div class="subFilterSections">
+                                    <button id="processorFilter">Processors</button>
+                                    <button id="ramFilter">Memory Cards</button>
+                                    <button id="motherboardFilter">Motherboards</button>
+                                </div>
+                                <div class="subFilterSections">
+                                    <button id="graphicCardFilter">Graphic Cards</button>
+                                    <button id="storageFilter">Storage Devices</button>
+                                </div>
+                            </div>
+
+                        </li>
+                    </ol>
+
+                </li>
+
+                <li><a class="navLinks" href="./Faq.html">FAQs</a></li>
+
+            </ol>
 
         </nav>
 
