--- a/Upcoming-Games.html
+++ b/Upcoming-Games.html
@@ -67,7 +67,7 @@
                         </li>
 
                         <li id="periLink">
-                            <a href="./Peripherals.html" id="peripheralsLink">&rarr; Peripherals</a>
+                            <a href="./Peripherals.html" id="peripheralsLink" onclick="setDefault()">&rarr; Peripherals</a>
 
                             <div id="peripheralsFilterContainer" class="filterContainer">
                                 <div class="subFilterSections">
@@ -84,7 +84,7 @@
 
                         </li>
                         <li id="accLink">
-                            <a href="./Accessories.html">&rarr; Accessories</a>
+                            <a href="./Accessories.html" onclick="setDefault()">&rarr; Accessories</a>
 
                             <div id="accessoriesFilterContainer" class="filterContainer">
                                 <div class="subFilterSections">
