--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="./Scripts/Animations/homeAnimation.js" defer></script>
     <script src="./Scripts/Animations/Hamburger.js" defer></script>
     <script src="./Scripts/Store/searchbar.js" defer></script>
+    <script src="./Scripts/Store/cartNotify.js" defer></script>
     <script src="./Scripts/navigation/navigation.js" defer></script>
     
 </head>
