removed dummy text

--- a/About-us.html
+++ b/About-us.html
@@ -205,24 +205,24 @@
                     <td><a href="#Kandy"><h2>Kandy</h2></a></td>
                     <td rowspan="4">8.00 a.m</td>
                     <td>6.00 p.m</td>
-                    <td class="tele">07#-#######</td>
+                    <td class="tele">071-500 5000</td>
                 </tr>
 
                 <tr>
                     <td><a href="#Kegalle"><h2>Kegalle</h2></a></td>
                     <td rowspan="2">5.00 p.m</td>
-                    <td class="tele">07#-#######</td>
+                    <td class="tele">074-345 2345</td>
                 </tr>
 
                 <tr>
                     <td><a href="#Gampaha"><h2>Gampaha</h2></a></td>
-                    <td class="tele">07#-#######</td>
+                    <td class="tele">077-444 5656</td>
                 </tr>
 
                 <tr>
                     <td><a href="#Colombo"><h2>Colombo</h2></a></td>
                     <td>6.00 p.m</td>
-                    <td class="tele">07#-#######</td>
+                    <td class="tele">071-767 6900</td>
                 </tr>
 
             </table>
@@ -268,7 +268,7 @@
 
                         <h4>Address</h4>
                         <h4>Open : 8 a.m to 6 p.m</h4>
-                        <h4>Hotline : 07#-#######</h4>
+                        <h4>Hotline : 071-500 5000</h4>
                         <h4>E-mail : primeavatar_kandy@gmail.com</h4>
 
 
@@ -313,7 +313,7 @@
 
                         <h4>Address</h4>
                         <h4>Open : 8 a.m to 5 p.m</h4>
-                        <h4>Hotline : 07#-#######</h4>
+                        <h4>Hotline : 074-345 2345</h4>
                         <h4>E-mail : primeavatar_kegalle@gmail.com</h4>
 
 
@@ -365,7 +365,7 @@
 
                         <h4>Address</h4>
                         <h4>Open : 8 a.m to 5 p.m</h4>
-                        <h4>Hotline : 07#-#######</h4>
+                        <h4>Hotline : 077-444 5656</h4>
                         <h4>E-mail : primeavatar_gampaha@gmail.com</h4>
 
 
@@ -410,7 +410,7 @@
 
                         <h4>Address</h4>
                         <h4>Open : 8 a.m to 6 p.m</h4>
-                        <h4>Hotline : 07#-#######</h4>
+                        <h4>Hotline : 071-767 6900</h4>
                         <h4>E-mail : primeavatar_colombo@gmail.com</h4>
 
 
@@ -551,7 +551,7 @@
     
             <section class="contacts">
                 <h2 class="footer-titles">Contacts</h2>
-                <li class="olbasic">Hotline- 07#-#######</li>
+                <li class="olbasic">Hotline- 077-323 2233</li>
                 <a href="#">Address</a>
                 <a href="#">primeavatar_support@gmail.com</a>
             </section>
