--- a/Consoles.html
+++ b/Consoles.html
@@ -327,7 +327,7 @@
 
         <section class="contacts">
             <h2 class="footer-titles">Contacts</h2>
-            <li class="olbasic">Hotline- 07#-#######</li>
+            <li class="olbasic">Hotline- 077-323 2233</li>
             <a href="#">Address</a>
             <a href="#">primeavatar_support@gmail.com</a>
         </section>
